--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="./dist/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <title>Order summary card</title>
-  </head>
-  <body>
-    Order Summary You can now listen to millions of songs, audiobooks, and
-    podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-    Proceed to Payment Cancel Order
 
-    <div class="att">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Non mollitia illo
-      possimus numquam, dolor culpa ullam sit explicabo tenetur voluptatum?
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="./dist/css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+    rel="stylesheet" />
+  <title>Order summary card</title>
+</head>
+
+<body>
+  <div class="card">
+    <div class="image">
+      <img src="./dist/images/illustration-hero.svg" alt="hero image" />
     </div>
-  </body>
+    <div class="order-summary">
+      <h1>Order Summary</h1>
+      <p>
+        You can now listen to millions of songs, audiobooks, and podcasts on
+        any device anywhere you like!
+      </p>
+      <div class="order-plan">
+        <img src="./dist/images/icon-music.svg" alt="" />
+        <div class="plan-summary">
+          <h2>Annual Plan</h2>
+          <span>$59.99/year</span>
+        </div>
+        <a href="#">Change</a>
+      </div>
+      <div class="select-order">
+        <button class="proceed">Proceed to Payment</button>
+        <button class="cancel">Cancel Order</button>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
